// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchableSelect [common] example testing should match snapshot(s) for 01.basic 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SearchableSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  optionContainerStyle={
    Object {
      "maxHeight": "200",
    }
  }
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SearchableSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SearchableSelect-Control-content"
      >
        Select State
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Header
    className="lucid-SearchableSelect-Search-container"
  >
    <SearchField
      debounceLevel={500}
      isDisabled={false}
      onChange={[Function]}
      onChangeDebounced={[Function]}
      onSubmit={[Function]}
      value=""
    />
  </DropMenu.Header>
  <DropMenu.OptionGroup
    isHidden={false}
    key="SearchableSelectOptionGroup0"
  >
    PST
    <SearchableSelect.Option
      value="CA"
    >
      California
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NV"
    >
      Nevada
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="OR"
    >
      Oregon
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="WA"
    >
      Washington
    </SearchableSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption0"
      value="CA"
    >
      California
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption1"
      value="NV"
    >
      Nevada
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption2"
      value="OR"
    >
      Oregon
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption3"
      value="WA"
    >
      Washington
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.OptionGroup
    isHidden={false}
    key="SearchableSelectOptionGroup1"
  >
    MST
    <SearchableSelect.Option
      value="CO"
    >
      Colorado
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="ID"
    >
      Idaho
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MT"
    >
      Montana
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NM"
    >
      New Mexico
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="ND"
    >
      North Dakota
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="SD"
    >
      South Dakota
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="WI"
    >
      Wisconsin
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="WY"
    >
      Wyoming
    </SearchableSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption4"
      value="CO"
    >
      Colorado
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption5"
      value="ID"
    >
      Idaho
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption6"
      value="MT"
    >
      Montana
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption7"
      value="NM"
    >
      New Mexico
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption8"
      value="ND"
    >
      North Dakota
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption9"
      value="SD"
    >
      South Dakota
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption10"
      value="WI"
    >
      Wisconsin
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption11"
      value="WY"
    >
      Wyoming
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.OptionGroup
    isHidden={false}
    key="SearchableSelectOptionGroup2"
  >
    CST
    <SearchableSelect.Option
      value="AR"
    >
      Arkansas
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="IL"
    >
      Illinois
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="IN"
    >
      Indiana
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="IA"
    >
      Iowa
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="KS"
    >
      Kansas
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="KY"
    >
      Kentucky
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MI"
    >
      Michigan
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MN"
    >
      Minnesota
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MS"
    >
      Mississippi
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MO"
    >
      Missouri
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NE"
    >
      Nebraska
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="OH"
    >
      Ohio
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="OK"
    >
      Oklahoma
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="TN"
    >
      Tennessee
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="TX"
    >
      Texas
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="UT"
    >
      Utah
    </SearchableSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption12"
      value="AR"
    >
      Arkansas
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption13"
      value="IL"
    >
      Illinois
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption14"
      value="IN"
    >
      Indiana
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption15"
      value="IA"
    >
      Iowa
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption16"
      value="KS"
    >
      Kansas
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption17"
      value="KY"
    >
      Kentucky
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption18"
      value="MI"
    >
      Michigan
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption19"
      value="MN"
    >
      Minnesota
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption20"
      value="MS"
    >
      Mississippi
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption21"
      value="MO"
    >
      Missouri
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption22"
      value="NE"
    >
      Nebraska
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption23"
      value="OH"
    >
      Ohio
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption24"
      value="OK"
    >
      Oklahoma
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption25"
      value="TN"
    >
      Tennessee
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption26"
      value="TX"
    >
      Texas
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption27"
      value="UT"
    >
      Utah
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.OptionGroup
    isHidden={false}
    key="SearchableSelectOptionGroup3"
  >
    EST
    <SearchableSelect.Option
      value="AL"
    >
      <span>
        USA: 
      </span>
      Alabama
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="AZ"
    >
      Arizona
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="CT"
    >
      Connecticut
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="DE"
    >
      Delaware
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="DC"
    >
      District Of Columbia
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="FL"
    >
      Florida
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="GA"
    >
      Georgia
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="LA"
    >
      Louisiana
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="ME"
    >
      Maine
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MD"
    >
      Maryland
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="MA"
    >
      Massachusetts
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NH"
    >
      New Hampshire
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NJ"
    >
      New Jersey
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NY"
    >
      New York
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="NC"
    >
      North Carolina
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="PA"
    >
      Pennsylvania
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="RI"
    >
      Rhode Island
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="SC"
    >
      South Carolina
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="VT"
    >
      Vermont
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="VA"
    >
      Virginia
    </SearchableSelect.Option>
    <SearchableSelect.Option
      value="WV"
    >
      West Virginia
    </SearchableSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption28"
      value="AL"
    >
      <span>
        USA: 
      </span>
      Alabama
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption29"
      value="AZ"
    >
      Arizona
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption30"
      value="CT"
    >
      Connecticut
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption31"
      value="DE"
    >
      Delaware
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption32"
      value="DC"
    >
      District Of Columbia
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption33"
      value="FL"
    >
      Florida
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption34"
      value="GA"
    >
      Georgia
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption35"
      value="LA"
    >
      Louisiana
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption36"
      value="ME"
    >
      Maine
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption37"
      value="MD"
    >
      Maryland
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption38"
      value="MA"
    >
      Massachusetts
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption39"
      value="NH"
    >
      New Hampshire
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption40"
      value="NJ"
    >
      New Jersey
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption41"
      value="NY"
    >
      New York
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption42"
      value="NC"
    >
      North Carolina
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption43"
      value="PA"
    >
      Pennsylvania
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption44"
      value="RI"
    >
      Rhode Island
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption45"
      value="SC"
    >
      South Carolina
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption46"
      value="VT"
    >
      Vermont
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption47"
      value="VA"
    >
      Virginia
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSelectOption48"
      value="WV"
    >
      West Virginia
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption49"
    value="AK"
  >
    Alaska
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption50"
    value="HI"
  >
    Hawaii
  </DropMenu.Option>
</DropMenu>
`;

exports[`SearchableSelect [common] example testing should match snapshot(s) for 02.loading 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SearchableSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  optionContainerStyle={
    Object {
      "maxHeight": "200",
    }
  }
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SearchableSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SearchableSelect-Control-content"
      >
        Select State
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Header
    className="lucid-SearchableSelect-Search-container"
  >
    <SearchField
      debounceLevel={500}
      isDisabled={false}
      onChange={[Function]}
      onChangeDebounced={[Function]}
      onSubmit={[Function]}
      value=""
    />
  </DropMenu.Header>
  <DropMenu.Option
    className="lucid-SearchableSelect-Loading"
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectLoading"
  >
    <LoadingIcon
      aspectRatio="xMidYMid meet"
      isBadge={false}
      isClickable={false}
      isDisabled={false}
      size={16}
      speed="normal"
      viewBox="0 0 16 16"
    />
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption0"
    value="AL"
  >
    Alabama
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption1"
    value="AK"
  >
    Alaska
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption2"
    value="AZ"
  >
    Arizona
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption3"
    value="AR"
  >
    Arkansas
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption4"
    value="CA"
  >
    California
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption5"
    value="CO"
  >
    Colorado
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption6"
    value="CT"
  >
    Connecticut
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption7"
    value="DE"
  >
    Delaware
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption8"
    value="DC"
  >
    District Of Columbia
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption9"
    value="FL"
  >
    Florida
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption10"
    value="GA"
  >
    Georgia
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption11"
    value="HI"
  >
    Hawaii
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption12"
    value="ID"
  >
    Idaho
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption13"
    value="IL"
  >
    Illinois
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption14"
    value="IN"
  >
    Indiana
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption15"
    value="IA"
  >
    Iowa
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption16"
    value="KS"
  >
    Kansas
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption17"
    value="KY"
  >
    Kentucky
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption18"
    value="LA"
  >
    Louisiana
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption19"
    value="ME"
  >
    Maine
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption20"
    value="MD"
  >
    Maryland
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption21"
    value="MA"
  >
    Massachusetts
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption22"
    value="MI"
  >
    Michigan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption23"
    value="MN"
  >
    Minnesota
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption24"
    value="MS"
  >
    Mississippi
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption25"
    value="MO"
  >
    Missouri
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption26"
    value="MT"
  >
    Montana
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption27"
    value="NE"
  >
    Nebraska
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption28"
    value="NV"
  >
    Nevada
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption29"
    value="NH"
  >
    New Hampshire
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption30"
    value="NJ"
  >
    New Jersey
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption31"
    value="NM"
  >
    New Mexico
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption32"
    value="NY"
  >
    New York
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption33"
    value="NC"
  >
    North Carolina
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption34"
    value="ND"
  >
    North Dakota
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption35"
    value="OH"
  >
    Ohio
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption36"
    value="OK"
  >
    Oklahoma
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption37"
    value="OR"
  >
    Oregon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption38"
    value="PA"
  >
    Pennsylvania
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption39"
    value="RI"
  >
    Rhode Island
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption40"
    value="SC"
  >
    South Carolina
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption41"
    value="SD"
  >
    South Dakota
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption42"
    value="TN"
  >
    Tennessee
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption43"
    value="TX"
  >
    Texas
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption44"
    value="UT"
  >
    Utah
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption45"
    value="VT"
  >
    Vermont
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption46"
    value="VA"
  >
    Virginia
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption47"
    value="WA"
  >
    Washington
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption48"
    value="WV"
  >
    West Virginia
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption49"
    value="WI"
  >
    Wisconsin
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption50"
    value="WY"
  >
    Wyoming
  </DropMenu.Option>
</DropMenu>
`;

exports[`SearchableSelect [common] example testing should match snapshot(s) for 03.custom-search-placeholder 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SearchableSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  optionContainerStyle={
    Object {
      "maxHeight": "200",
    }
  }
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SearchableSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SearchableSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Header
    className="lucid-SearchableSelect-Search-container"
  >
    <SearchField
      debounceLevel={500}
      isDisabled={false}
      onChange={[Function]}
      onChangeDebounced={[Function]}
      onSubmit={[Function]}
      placeholder="Type here to filter..."
      value=""
    />
  </DropMenu.Header>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption0"
  >
    Blue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption1"
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption2"
  >
    Orange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption3"
  >
    Red
  </DropMenu.Option>
</DropMenu>
`;

exports[`SearchableSelect child elements Option should render Option child function by passing in {searchText}, setting filterText on each option and using a custom optionFilter 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SearchableSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  optionContainerStyle={Object {}}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SearchableSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SearchableSelect-Control-content"
      >
        select one
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Header
    className="lucid-SearchableSelect-Search-container"
  >
    <SearchField
      debounceLevel={500}
      isDisabled={false}
      onChange={[Function]}
      onChangeDebounced={[Function]}
      onSubmit={[Function]}
      value="tion"
    />
  </DropMenu.Header>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption0"
    name="OptionA"
  >
    <Component
      searchText="tion"
    />
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption1"
    name="OptionB"
  >
    <Component
      searchText="tion"
    />
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption2"
    name="OptionC"
  >
    <Component
      searchText="tion"
    />
  </DropMenu.Option>
</DropMenu>
`;

exports[`SearchableSelect child elements Option should render Option.Selected in the Placeholder area 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SearchableSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  optionContainerStyle={Object {}}
  selectedIndices={
    Array [
      1,
    ]
  }
>
  <DropMenu.Control>
    <div
      className="lucid-SearchableSelect-Control lucid-SearchableSelect-Control-is-highlighted lucid-SearchableSelect-Control-is-selected"
      tabIndex={0}
    >
      <span
        className="lucid-SearchableSelect-Control-content"
      >
        option b
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Header
    className="lucid-SearchableSelect-Search-container"
  >
    <SearchField
      debounceLevel={500}
      isDisabled={false}
      onChange={[Function]}
      onChangeDebounced={[Function]}
      onSubmit={[Function]}
      value=""
    />
  </DropMenu.Header>
  <DropMenu.NullOption>
    select one
  </DropMenu.NullOption>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption0"
    name="OptionA"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "width": 100,
          }
        }
      >
        id
      </div>
      <div>
        option a
      </div>
    </div>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption1"
    name="OptionB"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "width": 100,
          }
        }
      >
        id
      </div>
      <div>
        option b
      </div>
    </div>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SearchableSelectOption2"
    name="OptionC"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "width": 100,
          }
        }
      >
        id
      </div>
      <div>
        option c
      </div>
    </div>
  </DropMenu.Option>
</DropMenu>
`;
